# Driver-Drowsiness-Detection

./: .gitignore  .gitignore.txt  CMakeLists.txt  DrowsinessEngine.cpp  DrowsinessEngine.h  EARCalculator.cpp  EARCalculator.h  README.md  main.cpp  style.css
include/: EARCalculator.h  LandmarkDetector.h
src/: LandmarkDetector.cpp  main.cpp
web/: index.html  script.js
